<?xml version="1.0"?>
<package format="2">
  <name>visualize</name>
  <version>0.0.0</version>
  <description> RVIZ visualization of the package </description>
  <maintainer email="advaith.maddipatla@gmail.com">advaith</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <depend>apriltag</depend>
  <depend>usb_cam</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>apriltag_ros</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
